# LicheeRV-Nano-Build

./: .gitignore  .gitmodules  README.md  README.md.old  README.org  apply_patches.sh  install_middleware.sh
.github/workflows/: licheervnano-host-linux-amd64.yml
buildroot/: .checkpackageignore  DEVELOPERS
buildroot-2021.05/configs/: cvitek_CV181X_musl_riscv64_defconfig
buildroot-2021.05/package/: Config.in
buildroot/configs/: cvitek_SG200X_32bit_defconfig  cvitek_SG200X_musl_riscv64_defconfig
buildroot/package/: Config.in  Config.in.host
demo/: tioccons.c
docker/: Dockerfile  libcrypto.so.1.1  libssl.so.1.1
freertos/Source/: CONTRIBUTING.md
freertos/cvitek/: build_cv183x.sh
freertos/cvitek/driver/cif/: CMakeLists.txt
freertos/cvitek/driver/cif/src/: cif.c
freertos/cvitek/driver/fast_image/: CMakeLists.txt
freertos/cvitek/driver/rgn/: CMakeLists.txt
freertos/cvitek/driver/rgn/common/src/: cmpr_canvas.c  cvi_osdc.c  osd_cmpr.c
freertos/cvitek/driver/sensor/: CMakeLists.txt
freertos/cvitek/driver/sensor/src/: camera.c  gain_table.c  sensor.c
freertos/cvitek/driver/sensor/src/gcore_gc4653/: gc4653_cmos.c  gc4653_cmos_ex.h  gc4653_cmos_param.h  gc4653_sensor_ctl.c
freertos/cvitek/driver/sensor/src/sony_imx327/: imx327_cmos.c  imx327_cmos_ex.h  imx327_cmos_param.h  imx327_sensor_ctl.c
fsbl/: Makefile
fsbl/make_helpers/: get_rsa_n.py
fsbl/plat/: sg200x
fsbl/test/: Makefile
host/: Dockerfile  libconfuse.so.2.1.0  make_logo.sh  mount_ext4.sh
host/archlinux/: Dockerfile
host/debian/: Dockerfile
host/fedora/: Dockerfile
host/ubuntu/: Dockerfile
isp_tuning/: packBins.sh
kvm/: NanoKVM_img.sh
linux_5.10/init/: main.c
middleware/v2/: .gitignore  Makefile  Makefile.param
osdrv/: .gitignore  Makefile
oss/: README.md  run_build.sh
patches/linux_5.10/: 0001-drivers-net-wireless-add-config-aic8800.patch  0002-init-try-jump-for-init-process.patch  0003-sound-soc-cvitek-cv181x-adc-dac-default-volume-is-to.patch  0004-drivers-add-hynitron-touch-screen.patch  0005-hynitron_core.c-disable-CLEAR_POINT-message.patch
patches/middleware/: 0001-v2-Makefile-install-vio-sensor_test-audio-demo-into-.patch  0002-v2-Makefile-dont-copy-some-file-because-source-file-.patch  0003-v2-component-panel-sg200x-add-dsi_st7701_hd228001c31.patch  0004-v2-sample-mipi_tx-sample_dsi_panel.h-add-dsi_st7701_.patch  0005-v2-component-isp-sensor-sg200x-gcore_gc4653-add-supp.patch  0006-v2-component-panel-sg200x-dsi_zct2133v1.h-add-zct213.patch  0007-v2-sample-mipi_tx-sample_dsi.c-add-zct2133v1-into-sa.patch  0008-v2-sample-common-sample_common_sensor.c-fix-sensor-p.patch  0009-v2-sample-vio-sample_vio.c-fix-crash-thank-lxowalle.patch  0010-v2-component-panel-sg200x-dsi_st7701_hd228001c31.h-r.patch  0011-v2-component-panel-sg200x-dsi_st7701_hd228001c31_alt.patch  0012-v2-sample-mipi_tx-sample_dsi-add-st7701_d300fpc9307a.patch  0013-v2-component-panel-sg200x-fix-CVI_U8-redefine.patch  0014-panel-add-st7701_dxq5d0019b480854.patch  0015-add-ive_stress-test.patch
patches/osdrv/: 0001-extdrv-wireless-add-aic8800-sdio.patch  0002-extdrv-wireless-aic8800-fix-firmware-load-path.patch  0003-interdrv-v2-fb-default-enable-double-buffer.patch  0004-interdrv-v2-fb-fix-pixel-format-for-licheervnao-add-.patch  0005-extdrv-tp-ts_gt9xx-gt9xx.h-change-touch-size-for-zct.patch
patches/ramdisk/: 0001-rootfs-public-wifi-musl_riscv64-add-aic8800-sdio-wif.patch  0002-src-add-qt5.patch  0008-20240228.patch  (+35 more)
tests/: Makefile  kernel.S  test.ld  tjm.txt
u-boot-2021.10/: cvitek.mk
(+6910 files in other folders)
